flash_message: prevent displaying it on small screens For some reason, it was visible when inactive on Chrome on smallscreen

--- a/app/modules/general/scss/_flash_message.scss
+++ b/app/modules/general/scss/_flash_message.scss
@@ -11,7 +11,7 @@
     font-size: 2rem;
   }
 
-  @include position(fixed, -5em, 0, null, null, 100);
+  @include position(fixed, -10em, 0, null, null, 100);
   @include transition(top);
   &.active{
     background-color: $warning-color;
